frontend header and footer

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Google Fonts -->
+    <!-- font-family: 'East Sea Dokdo', cursive; -->
+      <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
+    <!-- font-family: 'Dancing Script', cursive; -->
+      <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet"> 
+      <!-- font-family: 'Amatic SC', cursive;
+      font-family: 'East Sea Dokdo', cursive; -->
+      <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=East+Sea+Dokdo&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
